--- a/app/src/main/res/layout/activity_deposit1.xml
+++ b/app/src/main/res/layout/activity_deposit1.xml
@@ -129,7 +129,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:text="672018000"
+                        android:text="672018053"
                         android:textColor="#454545"
                         android:textSize="10sp" />
 
@@ -137,7 +137,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:text="Raven Wijaya"
+                        android:text="Samuel Nugraha"
                         android:textColor="#454545"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -230,7 +230,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:text="672018000"
+                        android:text="672018053"
                         android:textColor="#454545"
                         android:textSize="10sp" />
 
@@ -238,7 +238,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:text="Raven Wijaya"
+                        android:text="Samuel Nugraha"
                         android:textColor="#454545"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -325,7 +325,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:text="672018000"
+                        android:text="672018053"
                         android:textColor="#454545"
                         android:textSize="10sp" />
 
@@ -333,7 +333,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:text="Raven Wijaya"
+                        android:text="Samuel Nugraha"
                         android:textColor="#454545"
                         android:textSize="14sp" />
                 </LinearLayout>
