--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,13 +4,14 @@
     <item
         android:title="Accounts"
         android:id="@+id/account"
-        android:icon="@drawable/ic_baseline_account_circle_24" />
+        android:icon="@drawable/ic_baseline_account_circle_24"
+        app:showAsAction="always"/>
 
 <!--        app:showAsAction="always"-->
-    <item
-        android:title="Logout"
-        android:id="@+id/logout"
-        android:icon="@drawable/ic_baseline_account_circle_24"/>
+<!--    <item-->
+<!--        android:title="Logout"-->
+<!--        android:id="@+id/logout"-->
+<!--        android:icon="@drawable/ic_baseline_account_circle_24"/>-->
 
 
 </menu>
