--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -117,7 +117,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordsignin" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/gomaps"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
