--- a/app/src/main/res/layout/activity_deposit2.xml
+++ b/app/src/main/res/layout/activity_deposit2.xml
@@ -270,6 +270,7 @@
                             />
 
                         <EditText
+                            android:id="@+id/amountss"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="4dp"
@@ -279,7 +280,8 @@
                             android:inputType="numberDecimal" />
 
                         <Button
-                            android:id="@+id/btn_deposit2"
+
+                            android:id="@+id/btndepos"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginRight="8dp"
