--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -25,6 +25,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.raven.trcrypto.OrderActivity">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -274,7 +277,7 @@
             </LinearLayout>
 
         </LinearLayout>
-
+        </ScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
