--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -27,6 +27,7 @@
         android:layout_height="match_parent"
         tools:context="com.raven.trcrypto.ProfileActivity">
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -34,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp">
         <LinearLayout
-            android:background="@drawable/gradientbackground"
+            android:background="@drawable/bg2"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:orientation="vertical">
@@ -88,7 +89,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/logout"
         android:textColor="#fff"
-        android:background="#FF0000"
+        android:background="@drawable/round_button2"
         android:layout_marginTop="35dp"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
