Penyesuaian layout withdraw

--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -246,7 +246,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
-                                android:text="672018000"
+                                android:text="9889688863044772"
                                 android:textColor="#454545"
                                 android:textSize="10sp" />
 
@@ -254,7 +254,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
-                                android:text="Raven Wijaya"
+                                android:text="PT. Cryptx .Tbk"
                                 android:textColor="#454545"
                                 android:textSize="14sp" />
                         </LinearLayout>
@@ -341,7 +341,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
-                                android:text="672018000"
+                                android:text="8899688863044772"
                                 android:textColor="#454545"
                                 android:textSize="10sp" />
 
@@ -349,7 +349,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
-                                android:text="Raven Wijaya"
+                                android:text="PT. Cryptx .Tbk"
                                 android:textColor="#454545"
                                 android:textSize="14sp" />
                         </LinearLayout>
@@ -436,7 +436,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
-                                android:text="672018000"
+                                android:text="7788688863044772"
                                 android:textColor="#454545"
                                 android:textSize="10sp" />
 
@@ -444,7 +444,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
-                                android:text="Raven Wijaya"
+                                android:text="PT. Cryptx .Tbk"
                                 android:textColor="#454545"
                                 android:textSize="14sp" />
                         </LinearLayout>
