--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,7 +128,7 @@
                                 </androidx.cardview.widget.CardView>
                                 //card2
                                 <androidx.cardview.widget.CardView
-
+                                    android:id="@+id/withdraw"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_row="0"
