--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -209,7 +209,9 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/coin_recycler_view"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+                        android:layout_height="match_parent">
+
+                    </androidx.recyclerview.widget.RecyclerView>
 
                 </RelativeLayout>
             </LinearLayout>
