unfix withdraw (added bank account[belum link dengan firebase])

--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -472,6 +472,7 @@
             <!--tutup letakan fragment-->
 
             <TextView
+                android:id="@+id/addbank"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
